<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/aktivitas_berlangsung"
            android:icon="@drawable/ic_format_list_bulleted"
            android:title="@string/nav_berlangsung_aktivitas_text" />
        <item
            android:id="@+id/aktivitas_selesai"
            android:icon="@drawable/ic_playlist_add_check"
            android:title="@string/nav_completed_aktivitas_text" />
        <item
            android:id="@+id/label"
            android:icon="@drawable/ic_event_note"
            android:title="@string/nav_label_text" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings_text" />
    </group>

</menu>
